# grepl

./: CLAUDE.md  HOMEBREW_SETUP.md  README.md  pyproject.toml  requested-features.md  test-all-features.sh  test-daemon-smoke.sh  test-enhanced-cli.sh
.claude/: settings.json
.claude/skills/code-search/: SKILL.md
docs/: TLDR_FEATURES_PLAN.md  ast-grep-integration.md  hybrid-search-architecture-notes.md  hybrid-search-architecture.md  implementation.md  implementation_v2.md  implementation_v3.md
experiments/: 2026-01-07-chart-generation-search.md  2026-01-07-without-greppy-test.md
scripts/: update-grepl.sh
src/grepl/: __init__.py  ast_grep.py  chunker.py  cli.py  code_graph.py  diversity.py  embedder.py  llm_client.py  ltr.py  planner.py  query_expander.py  ranker.py  session.py  store.py  treesitter_chunker.py  user_model.py
src/grepl/daemon/: __init__.py  client.py  server.py
src/grepl/rules/: swift-dispatchqueue-main-async.yml  swift-no-print.yml  swift-try-catch.yml
src/grepl/utils/: __init__.py  formatters.py  tree_formatter.py
tests/: test_ast_grep.py  test_daemon_index_flush.py  test_find_integration.py  test_greplignore.py  test_planner.py  test_ranker.py  test_semantic_benchmark.py  test_store.py
tests/fixtures/: README.md  semantic_benchmark.json
