[project]
name = "grepl"
version = "0.2.8"
description = "Semantic code search CLI using ChromaDB + Ollama"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=0.4.0",
    "click>=8.0",
    "rich>=13.0",
    "tree-sitter>=0.20.0",
    "requests>=2.28.0",
    "pygments>=2.14.0",
]

[project.scripts]
grepl = "grepl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grepl"]
