[project]
name = "grepl"
version = "0.4.1"
description = "Explainable code search for humans and AI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "chromadb>=0.4.0",
    "click>=8.0",
    "rich>=13.0",
    "tree-sitter>=0.20.0",
    "tree-sitter-languages>=1.8.0",
    "requests>=2.28.0",
    "pygments>=2.14.0",
    "watchfiles>=0.20.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "numpy>=1.24.0",
    "httpx>=0.24.0",
    "scikit-learn>=1.3.0",
]

[project.scripts]
grepl = "grepl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/grepl"]
